--- a/jupyter/16_linked_list.ipynb
+++ b/jupyter/16_linked_list.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "9"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,16 +170,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "LinkedList.get=get"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +189,7 @@
        "2"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -304,11 +305,76 @@
     "        y._previous=x\n",
     "    return n._value\n",
     "print(l.info())\n",
-    "print(insert(l,20,5))\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(insert(l,20,5))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isprime(n):\n",
+    "    flag = 0\n",
+    "    for i in range(2,int((n+1)/2)):\n",
+    "        if n%i==0:\n",
+    "            flag=1\n",
+    "    if flag == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "def Findprime(list):\n",
+    "    cur = list._first\n",
+    "    prev = list._first\n",
+    "    while cur:\n",
+    "        prev = cur            \n",
+    "        cur = cur._next      \n",
+    "        data = cur._value\n",
+    "        if(isprime(data) and data!=1 and data!=0):\n",
+    "            print(data)      \n",
+    "\n",
+    "       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute '_value'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\raima\\training\\madhur\\jupyter\\16_linked_list.ipynb Cell 16\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X21sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m50\u001b[39m):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X21sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     l1\u001b[39m.\u001b[39mappend(i)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X21sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m Findprime(l)\n",
+      "\u001b[1;32mc:\\Users\\raima\\training\\madhur\\jupyter\\16_linked_list.ipynb Cell 16\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X21sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m prev \u001b[39m=\u001b[39m cur            \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X21sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m cur \u001b[39m=\u001b[39m cur\u001b[39m.\u001b[39m_next      \n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X21sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m data \u001b[39m=\u001b[39m cur\u001b[39m.\u001b[39;49m_value\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X21sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mif\u001b[39;00m(isprime(data) \u001b[39mand\u001b[39;00m data\u001b[39m!=\u001b[39m\u001b[39m1\u001b[39m \u001b[39mand\u001b[39;00m data\u001b[39m!=\u001b[39m\u001b[39m0\u001b[39m):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X21sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m     \u001b[39mprint\u001b[39m(data)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute '_value'"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = LinkedList()\n",
+    "for i in range(50):\n",
+    "    l1.append(i)\n",
+    "Findprime(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
