update on 16_linked_list

--- a/jupyter/16_linked_list.ipynb
+++ b/jupyter/16_linked_list.ipynb
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,17 +384,17 @@
     "    print(\"EVEN\")\n",
     "    cur = list._first\n",
     "    prev = list._first\n",
-    "    while cur._next:\n",
-    "        prev = cur            \n",
-    "        cur = cur._next      \n",
-    "        data = cur._value  \n",
+    "    while cur:\n",
+    "        data = cur._value\n",
     "        if data%2==0:\n",
-    "            print(f'{data}',end=\"\\t\")"
+    "            print(f'{data}',end=\"\\t\")\n",
+    "        prev = cur            \n",
+    "        cur = cur._next      \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
      "text": [
       "LinkedList(\t10\t30\t40\t50\t60\t70\t80\t90\t100\t)\n",
       "EVEN\n",
-      "30\t40\t50\t60\t70\t80\t90\t100\t"
+      "10\t30\t40\t50\t60\t70\t80\t90\t100\t"
      ]
     }
    ],
