--- a/jupyter/book.ipynb
+++ b/jupyter/book.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,8 @@
       "Found by Rating Range : 2,He lived,Gregor,2000,4\n",
       "Found by Price Range : 1,Old days,Benjamin,999,4.5\n",
       "Found by Price Range : 3,The lost,Franklin,1099,3\n",
-      "Found by Price Range : 2,He lived,Gregor,2000,4\n"
+      "Found by Price Range : 2,He lived,Gregor,2000,4\n",
+      "Found by ID : 3,The lost,Franklin,1099,3\n"
      ]
     }
    ],
@@ -82,6 +83,7 @@
     "l.findByAuthor(\"Benjamin\")\n",
     "l.findByRating(3,4.5)\n",
     "l.findByPrice(999,2000)\n",
+    "l.findByID(3)\n",
     "\n"
    ]
   },
