--- a/jupyter/16_linked_list.ipynb
+++ b/jupyter/16_linked_list.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,22 +43,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "class LinkedList:\n",
     "    def __init__(self):\n",
     "        self._first=None\n",
+    "        self._tail=None\n",
     "\n",
     "    def append(self, value):\n",
     "        if self._first==None: # list is empty\n",
     "            self._first=Node(value)\n",
+    "            self._tail = self._first\n",
     "        else: # add to the end of a non-empty list\n",
-    "            n=self._first\n",
-    "            while n._next:\n",
-    "                n=n._next\n",
-    "            n._next=Node(value, previous=n)\n",
+    "            new_node = Node(value, previous=self._tail)\n",
+    "            self._tail._next = new_node\n",
+    "            self._tail = new_node\n",
+    "\n",
     "\n",
     "    def info(self):\n",
     "        if self._first==None: \n",
@@ -78,12 +80,29 @@
     "            c+=1\n",
     "            n=n._next\n",
     "        return c\n",
+    "    \n",
+    "    def get_node(self,index):\n",
+    "        n=self._first\n",
+    "        for i in range(index):\n",
+    "            n=n._next\n",
+    "            if n==None:\n",
+    "                return None\n",
+    "        else:\n",
+    "            return n\n",
+    "        \n",
+    "    def get(self,index):\n",
+    "        return self.get_node(index)._value\n",
+    "    def set(list,index,value):\n",
+    "        n = list.get_node(index)\n",
+    "        if not n:\n",
+    "            return\n",
+    "        n._value=value\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -95,15 +114,13 @@
     }
    ],
    "source": [
-    "l1 = LinkedList()\n",
-    "\n",
-    "print(l1.info())\n",
-    "\n"
+    "l1=LinkedList()\n",
+    "print(l1.info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -121,28 +138,12 @@
     "\n",
     "print('size', l1.size())\n",
     "\n",
-    "print(l1.info())"
+    "print(l1.info())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get(list,index):\n",
-    "    n=list._first\n",
-    "    for i in range(index):\n",
-    "        n=n._next\n",
-    "        if n==None:\n",
-    "            break\n",
-    "    else:\n",
-    "        return n._value\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +152,7 @@
        "9"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,121 +171,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "LinkedList.get=get"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l1.get(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def set(list,index,value):\n",
-    "    n=list._first\n",
-    "    for i in range(index):\n",
-    "        n=n._next\n",
-    "        if n==None:\n",
-    "            break\n",
-    "    else:\n",
-    "        n._value=value\n",
-    "\n",
-    "LinkedList.set=set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "LinkedList(\t0\t10\t20\t30\t40\t)\n"
-     ]
-    }
-   ],
-   "source": [
-    "l2=LinkedList()\n",
-    "for i in range(5):\n",
-    "    l2.append(i)\n",
-    "    \n",
-    "for i in range(l2.size()):\n",
-    "    print(l2.get(i))\n",
-    "    l2.set(i, i*10)\n",
-    "\n",
-    "print(l2.info())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LinkedList(\t10\t20\t30\t40\t50\t60\t70\t80\t90\t100\t)\n",
-      "20\n",
-      "LinkedList(\t10\t30\t40\t50\t60\t70\t80\t90\t100\t)\n"
-     ]
-    }
-   ],
-   "source": [
-    "l=LinkedList()\n",
-    "for n in range(10,101,10):\n",
-    "    l.append(n)\n",
-    "    def get_index_node(list, index):\n",
-    "        n=list._first\n",
-    "        for i in range(index):\n",
-    "         n=n._next\n",
-    "         if n==None:\n",
-    "            break\n",
-    "         else:\n",
-    "            return n\n",
-    "\n",
-    " \n",
-    "def get(list,index):\n",
-    "    n=get_index_node(list, index)\n",
-    "    return n._value\n",
-    "\n",
-    "def set(list,index,value):\n",
-    "    n=get_index_node(list, index)\n",
-    "    n._value=value\n",
-    "\n",
     "def insert(list, index, value):\n",
-    "    y=get_index_node(list, index)\n",
+    "    y=list.get_node(index)\n",
     "    x=y._previous\n",
     "    new_node=Node(value,previous=x,next=y)\n",
     "    if x:\n",
@@ -293,9 +185,8 @@
     "        list._first=new_node\n",
     "    y._previous=new_node\n",
     "\n",
-    "\n",
     "def remove(list, index):\n",
-    "    n=get_index_node(list, index)\n",
+    "    n=list.get_node(index)\n",
     "    x= n._previous\n",
     "    y= n._next\n",
     "    if x:\n",
@@ -304,16 +195,84 @@
     "        list._first=y\n",
     "    if y:\n",
     "        y._previous=x\n",
-    "    return n._value\n",
-    "\n",
-    "print(l.info())\n",
-    "print(remove(l,1))\n",
-    "print(l.info())\n"
+    "    return n._value\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinkedList(\t2\t3\t9\t9\t2\t6\t)\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute '_previous'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\raima\\training\\madhur\\jupyter\\16_linked_list.ipynb Cell 10\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X36sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m remove(l1,\u001b[39m3\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X36sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m remove(l1,\u001b[39m4\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X36sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m remove(l1,\u001b[39m6\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X36sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(l1\u001b[39m.\u001b[39minfo())\n",
+      "\u001b[1;32mc:\\Users\\raima\\training\\madhur\\jupyter\\16_linked_list.ipynb Cell 10\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X36sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mremove\u001b[39m(\u001b[39mlist\u001b[39m, index):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X36sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     n\u001b[39m=\u001b[39m\u001b[39mlist\u001b[39m\u001b[39m.\u001b[39mget_node(index)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X36sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     x\u001b[39m=\u001b[39m n\u001b[39m.\u001b[39;49m_previous\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X36sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     y\u001b[39m=\u001b[39m n\u001b[39m.\u001b[39m_next\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X36sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39mif\u001b[39;00m x:\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute '_previous'"
+     ]
+    }
+   ],
+   "source": [
+    "insert(l1,2,9)\n",
+    "print(l1.info())\n",
+    "remove(l1,3)\n",
+    "remove(l1,4)\n",
+    "remove(l1,6)\n",
+    "print(l1.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clear(self):\n",
+    "    temp = self._first\n",
+    "    while temp!=None:\n",
+    "        self.remove(0)\n",
+    "        temp = temp._next\n",
+    "def count(self, data):\n",
+    "    temp = self._first\n",
+    "    count = 0\n",
+    "    while temp != None:\n",
+    "        if(temp._value == data):\n",
+    "            count += 1\n",
+    "        temp = temp._value\n",
+    "    return count\n",
+    "    \n",
+    "def __str__(self):\n",
+    "    output = '('\n",
+    "    temp = self._first\n",
+    "    while temp != None:\n",
+    "        output += str(temp._value) + ','\n",
+    "        temp = temp._next\n",
+    "    output +=')'\n",
+    "    return output\n",
+    "\n",
+    "def __contains__(self, data):\n",
+    "    temp = self._first\n",
+    "    while temp != None:\n",
+    "        if temp._value == data:\n",
+    "            return True\n",
+    "        temp = temp._next\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,48 +294,30 @@
     "        current = current._next      \n",
     "        data = current._value\n",
     "        if(isPrime(data) and data!=1 and data!=0):\n",
-    "            print(data)      \n",
-    "\n",
-    "       "
+    "            print(data)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
       "3\n",
-      "5\n",
-      "7\n",
-      "11\n",
-      "13\n",
-      "17\n",
-      "19\n",
-      "23\n",
-      "29\n",
-      "31\n",
-      "37\n",
-      "41\n",
-      "43\n",
-      "47\n"
+      "2\n"
      ]
     }
    ],
    "source": [
-    "l1 = LinkedList()\n",
-    "for i in range(50):\n",
-    "    l1.append(i)\n",
     "findPrime(l1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,28 +335,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LinkedList(\t10\t30\t40\t50\t60\t70\t80\t90\t100\t)\n",
       "EVEN\n",
-      "10\t30\t40\t50\t60\t70\t80\t90\t100\t"
+      "2\t2\t"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'LinkedList(\\t2\\t3\\t9\\t2\\t)'"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "print(l.info())\n",
-    "isEven(l)"
+    "isEven(l1)\n",
+    "l1.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,37 +392,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "LinkedList.sort_list=sort_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LinkedList(\t10\t30\t40\t50\t60\t70\t80\t90\t100\t)\n"
+      "LinkedList(\t2\t2\t3\t9\t)\n"
      ]
     }
    ],
    "source": [
-    "print(l.info())\n",
-    "sort_list(l)"
+    "sort_list(l1)\n",
+    "print(l1.info())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
