--- a/jupyter/16_linked_list.ipynb
+++ b/jupyter/16_linked_list.ipynb
@@ -200,35 +200,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LinkedList(\t2\t3\t9\t9\t2\t6\t)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute '_previous'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\raima\\training\\madhur\\jupyter\\16_linked_list.ipynb Cell 10\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X36sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m remove(l1,\u001b[39m3\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X36sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m remove(l1,\u001b[39m4\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X36sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m remove(l1,\u001b[39m6\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X36sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(l1\u001b[39m.\u001b[39minfo())\n",
-      "\u001b[1;32mc:\\Users\\raima\\training\\madhur\\jupyter\\16_linked_list.ipynb Cell 10\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X36sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mremove\u001b[39m(\u001b[39mlist\u001b[39m, index):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X36sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     n\u001b[39m=\u001b[39m\u001b[39mlist\u001b[39m\u001b[39m.\u001b[39mget_node(index)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X36sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     x\u001b[39m=\u001b[39m n\u001b[39m.\u001b[39;49m_previous\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X36sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     y\u001b[39m=\u001b[39m n\u001b[39m.\u001b[39m_next\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#X36sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39mif\u001b[39;00m x:\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute '_previous'"
+      "LinkedList(\t2\t2\t9\t9\t9\t9\t9\t9\t)\n"
      ]
     }
    ],
    "source": [
     "insert(l1,2,9)\n",
-    "print(l1.info())\n",
-    "remove(l1,3)\n",
-    "remove(l1,4)\n",
-    "remove(l1,6)\n",
     "print(l1.info())"
    ]
   },
