--- a/jupyter/16_linked_list.ipynb
+++ b/jupyter/16_linked_list.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -143,18 +143,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'get' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\raima\\training\\madhur\\jupyter\\16_linked_list.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/raima/training/madhur/jupyter/16_linked_list.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m get(l1,\u001b[39m2\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'get' is not defined"
+     ]
     }
    ],
    "source": [
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,14 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LinkedList(\t2\t2\t9\t9\t9\t9\t9\t9\t)\n"
+      "LinkedList(\t2\t3\t9\t9\t2\t6\t)\n"
      ]
     }
    ],
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,21 +279,23 @@
     "        current = current._next      \n",
     "        data = current._value\n",
     "        if(isPrime(data) and data!=1 and data!=0):\n",
-    "            print(data)   "
+    "            return data   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "2\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -301,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -327,16 +330,16 @@
      "output_type": "stream",
      "text": [
       "EVEN\n",
-      "2\t2\t"
+      "2\t2\t6\t"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'LinkedList(\\t2\\t3\\t9\\t2\\t)'"
+       "'LinkedList(\\t2\\t3\\t9\\t9\\t2\\t6\\t)'"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,14 +379,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LinkedList(\t2\t2\t3\t9\t)\n"
+      "LinkedList(\t2\t2\t3\t6\t9\t9\t)\n"
      ]
     }
    ],
@@ -391,6 +394,13 @@
     "sort_list(l1)\n",
     "print(l1.info())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
